[gd_scene load_steps=56 format=2]

[ext_resource path="res://enemies/enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/behaviors/slow_walker_behavior.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemies/tadpole_enemy.gd" type="Script" id=4]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_07.png" type="Texture" id=6]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_02.png" type="Texture" id=7]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_15.png" type="Texture" id=8]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_05.png" type="Texture" id=9]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_16.png" type="Texture" id=10]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_12.png" type="Texture" id=11]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_18.png" type="Texture" id=12]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_19.png" type="Texture" id=13]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_22.png" type="Texture" id=14]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_23.png" type="Texture" id=15]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_29.png" type="Texture" id=16]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_24.png" type="Texture" id=17]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_04.png" type="Texture" id=18]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_20.png" type="Texture" id=19]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_10.png" type="Texture" id=20]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_21.png" type="Texture" id=21]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_13.png" type="Texture" id=22]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_06.png" type="Texture" id=23]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_26.png" type="Texture" id=24]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_00.png" type="Texture" id=25]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_11.png" type="Texture" id=26]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_14.png" type="Texture" id=27]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_17.png" type="Texture" id=28]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_28.png" type="Texture" id=29]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_03.png" type="Texture" id=30]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_27.png" type="Texture" id=31]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_25.png" type="Texture" id=32]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_09.png" type="Texture" id=33]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_01.png" type="Texture" id=34]
[ext_resource path="res://external/aseprite/enemies/tadpole/new_wobble/aseprite_frames/new_wobble_08.png" type="Texture" id=35]
[ext_resource path="res://enemies/behaviors/summoner_behavior.tscn" type="PackedScene" id=36]
[ext_resource path="res://external/sunvox/sfx/boss ouch.wav" type="AudioStream" id=37]
[ext_resource path="res://external/sunvox/sfx/slurp.ogg" type="AudioStream" id=38]
[ext_resource path="res://external/aseprite/enemies/tadpole/ouch/aseprite_frames/ouch_00.png" type="Texture" id=126]
[ext_resource path="res://external/aseprite/enemies/tadpole/ouch/aseprite_frames/ouch_01.png" type="Texture" id=127]
[ext_resource path="res://external/aseprite/enemies/tadpole/ouch/aseprite_frames/ouch_02.png" type="Texture" id=128]
[ext_resource path="res://external/aseprite/enemies/tadpole/ouch/aseprite_frames/ouch_03.png" type="Texture" id=129]
[ext_resource path="res://external/aseprite/enemies/tadpole/ouch/aseprite_frames/ouch_06.png" type="Texture" id=130]
[ext_resource path="res://external/aseprite/enemies/tadpole/ouch/aseprite_frames/ouch_07.png" type="Texture" id=131]
[ext_resource path="res://external/aseprite/enemies/tadpole/ouch/aseprite_frames/ouch_04.png" type="Texture" id=132]
[ext_resource path="res://external/aseprite/enemies/tadpole/ouch/aseprite_frames/ouch_05.png" type="Texture" id=133]
[ext_resource path="res://external/aseprite/enemies/tadpole/ouch/aseprite_frames/ouch_08.png" type="Texture" id=134]
[ext_resource path="res://external/aseprite/enemies/tadpole/ouch/aseprite_frames/ouch_09.png" type="Texture" id=135]
[ext_resource path="res://external/aseprite/enemies/tadpole/ouch/aseprite_frames/ouch_10.png" type="Texture" id=136]
[ext_resource path="res://external/aseprite/enemies/tadpole/ouch/aseprite_frames/ouch_12.png" type="Texture" id=137]
[ext_resource path="res://external/aseprite/enemies/tadpole/ouch/aseprite_frames/ouch_11.png" type="Texture" id=138]
[ext_resource path="res://external/aseprite/enemies/tadpole/ouch/aseprite_frames/ouch_14.png" type="Texture" id=139]
[ext_resource path="res://external/aseprite/enemies/tadpole/ouch/aseprite_frames/ouch_13.png" type="Texture" id=140]
[ext_resource path="res://fx/tadpole_perish.tscn" type="PackedScene" id=141]
[ext_resource path="res://external/aseprite/enemies/tadpole/tadpole_01.png" type="Texture" id=142]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 25 ), ExtResource( 34 ), ExtResource( 7 ), ExtResource( 30 ), ExtResource( 18 ), ExtResource( 9 ), ExtResource( 23 ), ExtResource( 6 ), ExtResource( 35 ), ExtResource( 33 ), ExtResource( 20 ), ExtResource( 26 ), ExtResource( 11 ), ExtResource( 22 ), ExtResource( 27 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 28 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 32 ), ExtResource( 24 ), ExtResource( 31 ), ExtResource( 29 ), ExtResource( 16 ) ],
"loop": true,
"name": "idle",
"speed": 30.0
}, {
"frames": [ ExtResource( 126 ), ExtResource( 127 ), ExtResource( 128 ), ExtResource( 129 ), ExtResource( 132 ), ExtResource( 133 ), ExtResource( 130 ), ExtResource( 131 ), ExtResource( 134 ), ExtResource( 135 ), ExtResource( 136 ), ExtResource( 138 ), ExtResource( 137 ), ExtResource( 140 ), ExtResource( 139 ) ],
"loop": false,
"name": "ouch",
"speed": 45.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.99998
height = 10.0

[node name="tadpole_enemy" instance=ExtResource( 1 )]
script = ExtResource( 4 )
flip_perish = true
perish_fx_scene = ExtResource( 141 )

[node name="animated_sprite" parent="." index="0"]
position = Vector2( 0, -8 )
frames = SubResource( 1 )
animation = "idle"
offset = Vector2( -18, 0 )

[node name="sprite" type="Sprite" parent="." index="1"]
position = Vector2( 0, -7 )
texture = ExtResource( 142 )
offset = Vector2( -18, 0 )

[node name="health_bar" parent="." index="2"]
max_health = 50.0
current_health = 50.0

[node name="ouch_duration" parent="." index="5"]
wait_time = 0.34

[node name="slow_walker_behavior" parent="." index="6" instance=ExtResource( 2 )]
max_speed = 150

[node name="collision_shape_2d" type="CollisionShape2D" parent="." index="7"]
position = Vector2( 0, -3 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="stab_cooldown" type="Timer" parent="." index="8"]
wait_time = 3.0
one_shot = true

[node name="stab_done" type="Timer" parent="." index="9"]
one_shot = true

[node name="summoner_behavior" parent="." index="10" instance=ExtResource( 36 )]

[node name="ouch_sound" parent="." index="11"]
stream = ExtResource( 37 )

[node name="slurp" type="AudioStreamPlayer2D" parent="." index="12"]
stream = ExtResource( 38 )
volume_db = -6.0
autoplay = true
max_distance = 600.0

[connection signal="timeout" from="stab_cooldown" to="." method="_on_stab_cooldown_timeout"]
[connection signal="timeout" from="stab_done" to="." method="_on_stab_done_timeout"]
